homeworks/14_kubernetes_secrets/05-SecurityContext_NetworkPolicies/NetworkPolicies/Policies/Ingress/00-deny-ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: netology-np-demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
