homeworks/14_kubernetes_secrets/05-SecurityContext_NetworkPolicies/NetworkPolicies/Policies/Ingress/02-allow-icmp-app1.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-icmp-from-app2
  namespace: netology-np-demo
spec:
  podSelector:
    matchLabels:
      role: app1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: app2
